# docs/swagger.json
@@ -20,7 +20,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Shorten"
+                    "Public"
                 ],
                 "summary": "Access a given shortened URL",
                 "parameters": [
@@ -55,7 +55,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admin"
+                    "Protected"
                 ],
                 "summary": "List a page of URLs",
                 "parameters": [
@@ -75,8 +75,14 @@
                     },
                     {
                         "type": "string",
-                        "description": "Condition for URLs retrieval, ex. 'Filters[id]=Lb'",
-                        "name": "Filters",
+                        "description": "An ID filter; will search for a record with a given ID",
+                        "name": "ID",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "A URL filter; will search for a record with URL that contains a given keyword",
+                        "name": "Keyword",
                         "in": "query"
                     }
                 ],
@@ -127,7 +133,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admin"
+                    "Protected"
                 ],
                 "summary": "Delete a URL with a given ID",
                 "parameters": [
@@ -195,7 +201,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Shorten"
+                    "Public"
                 ],
                 "summary": "Shorten a given URL",
                 "parameters": [
